[package]
name = "illustruct"
version = "0.1.0"
edition = "2021"


[lib]
name = "illustruct"
path = "src/lib.rs"

[[example]]
name = "ram_illust"

[[example]]
name = "align_illust"

[[example]]
name = "struct"

[[example]]
name = "self_ref"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.10.0"
unicode-width = "0.1.5"
petgraph = "0.6.2"
pod = "0.5.0"
pom = "3.2.0"
typed-arena = "2.0.1"
